ADD, RRC, FIX, RENAME, REMAKE

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div id="message">
     <span><button id="clear_msg">Clear</button></span>
-    <span><label for="max_height">Max height</label><input value="500" id="max_height" type="text"></span>
+    <span><label for="msg_field_max_height">Max height</label><input value="500" id="msg_field_max_height" type="text"></span>
 
     <div id="_message_field" style="max-height: 480px">
         <div id="message_field"></div>
