--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="public/client/style.css">
     <title>WEB_SOCKET</title>
 </head>
 <body>
@@ -49,8 +49,8 @@
     </div>
 </div>
 
-<script src="jquery-3.2.1.min.js"></script>
-<script src="jquery.cookie.js"></script>
-<script src="ws.js"></script>
+<script src="public/client/jquery-3.2.1.min.js"></script>
+<script src="public/client/jquery.cookie.js"></script>
+<script src="public/client/ws.js"></script>
 </body>
 </html>
