ADD font ADD format for textarea REMAKE formatObject

--- a/html/client/client.html
+++ b/html/client/client.html
@@ -28,6 +28,7 @@
         <label for="textarea">Запрос:</label><textarea id="textarea"></textarea>
         <button id="send">Send</button>
         <button id="clear_textarea">Clear</button>
+        <button id="format_textarea_btn">Format{}</button>
     </span>
     <span>
         <label for="pattern">Pattern</label>
