--- a/html/client/client.html
+++ b/html/client/client.html
@@ -52,5 +52,6 @@
 
 <script src="../../public/client/jquery-3.2.1.min.js"></script>
 <script src="../../public/client/ws.js"></script>
+<script src="../../public/client/events.js"></script>
 </body>
 </html>
