RRC REMAKE MOVE FIX сохранение урла

--- a/html/client/client.html
+++ b/html/client/client.html
@@ -33,7 +33,7 @@
     <span>
         <label for="pattern">Pattern</label>
         <select id="pattern">
-            <option value="empty">empty</option>
+            <option value="empty"></option>
         </select>
         <button id="delete_pattern">Delete</button>
     </span>
@@ -51,7 +51,10 @@
 </div>
 
 <script src="../../public/client/jquery-3.2.1.min.js"></script>
+<script src="../../public/client/storage.js"></script>
+<script src="../../public/client/other.js"></script>
 <script src="../../public/client/ws.js"></script>
+<script src="../../public/client/main.js"></script>
 <script src="../../public/client/events.js"></script>
 </body>
 </html>
