REMAKE переделанна вёрстка в горизонтальных полей на вертикальные

--- a/html/client/client.html
+++ b/html/client/client.html
@@ -6,7 +6,8 @@
     <title>WEB_SOCKET</title>
 </head>
 <body>
-<div class="field" id="head">
+
+<div class="panel" id="head">
     <span onsubmit="" class="">
         <label for="url">URL</label>
         <select id="protocol">
@@ -17,35 +18,50 @@
         <button id="connect">Connect</button>
         <button id="disconnect">Disconnect</button>
         <button id="save_url">Save</button>
-        <span class=""><label for="reconnect">Reconnect</label><input id="reconnect" type="checkbox"></span>
-        <label for="auto_msg">Auth</label><input id="auto_msg" type="text"><button id="auto_msg_save">Save</button>
+        <span class="">
+            <label for="reconnect">Reconnect</label>
+            <input id="reconnect" type="checkbox">
+        </span>
+        <label for="auto_msg">Auth</label>
+        <input id="auto_msg" type="text">
+        <button id="auto_msg_save">Save</button>
     </span>
 </div>
 
 
-<div class="field" id="textarea_field">
-    <span>
-        <label for="textarea">Запрос:</label><textarea id="textarea"></textarea>
+<div class="panel absolute left">
+    <div id="container_request_text">
+        <label for="request_text">Запрос:</label>
+        <textarea id="request_text"></textarea>
+    </div>
+    <div class="option_request_text">
         <button id="send">Send</button>
         <button id="clear_textarea">Clear</button>
         <button id="format_textarea_btn">Format{}</button>
-    </span>
-    <span>
+    </div>
+    <div>
         <label for="pattern">Pattern</label>
         <select id="pattern">
             <option value="empty"></option>
         </select>
         <button id="delete_pattern">Delete</button>
-    </span>
-    <label for="pattern_name">Name</label><input id="pattern_name" type="text">
-    <button id="save_pattern">Save</button>
+        <label for="pattern_name">Name</label>
+        <input id="pattern_name" type="text">
+        <button id="save_pattern">Save</button>
+    </div>
 </div>
 
-<div id="message">
-    <span><button id="clear_msg">Clear</button></span>
-    <span><label for="msg_field_max_height">Max height</label><input value="500" id="msg_field_max_height" type="text"></span>
 
-    <div id="_message_field" style="max-height: 480px">
+<div class="panel absolute right">
+    <span>
+        <button id="clear_msg">Clear</button>
+    </span>
+    <span>
+        <label for="msg_field_max_height">Max height</label>
+        <input value="500" id="msg_field_max_height" type="text">
+    </span>
+
+    <div id="_message_field">
         <div id="message_field"></div>
     </div>
 </div>
